# manpages-l10n

./: .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  AUTHORS.md  CHANGES  CHANGES.md  CONTRIBUTING.md  COPYRIGHT  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  add-outdated-warning.pl  collect-changes.sh  configure  configure.ac  coreutils.sh  coreutils.translations  create-authors-file.sh  create-changelog.sh  create-copyright-file.sh  create-links.pl  create-new-distribution-1.sh  create-new-distribution-2.sh  exec.3.po  generate-manpages.sh  gerMAN-09sep93.README  lizenz.add  man-pages-de-0.1.Announce  remove-double-pages.sh  remove-links.pl  repoconvert.sh
english/: Makefile.am  Makefile.in  download-packages.sh  packages.list  update-manpages.sh
english/console-tools/: console-tools.links
english/fdutils/: fdutils.links
english/groff-base/: groff-base.links
english/gzip/: gzip.links
english/links/: Makefile.am  Makefile.in  bsdmainutils.links  bzip2.links  coreutils.links  findutils.links  grep.links  hostname.links  less.links  manpages-dev.links  manpages.links  mount.links  nfs-common.links  systemd.links  sysvinit.links  util-linux.links  vorbis-tools.links  xz-utils.links
english/manpages/: manpages.links
english/manpages-dev/: manpages-dev.links
english/procps/: procps.links
english/util-linux/: util-linux.links
english/wodim/: wodim.links
po/: Makefile.am  Makefile.in  README  README.md  add-new-translation.sh  check-in.sh  clean-compendium.sh  common.mk  compendium.po  create-new-translation.sh  create-po.sh  create-untranslated.sh  distribution-fr.stub  distribution-nl.stub  exit_codes  find-compendium-candidates.sh  format-po.sh  generate-addendum.sh  generate-addendums.sh  generate-all-manpages.sh  generate-compendium.sh  generate-custom-compendium.sh  generate-manpage.sh  generate-mdoclist.sh  index-fr.stub  index-nl.stub  l10n_set  l10n_test  mdoc.cache  no-upstream.sh  setup-nl.inc  show-needed-updates.sh  show-stats.sh  translate-dates.pl  translate-dates.sh  untranslated-fr.stub  untranslated-nl.stub  update-common.sh  update-from-compendium.sh  update-po.sh  (+3 more)
po/common/: min-002-occurences.po  min-003-occurences.po  min-004-occurences.po  min-005-occurences.po  min-006-occurences.po  min-007-occurences.po  min-008-occurences.po  min-009-occurences.po  min-010-occurences.po  min-012-occurences.po  min-014-occurences.po  min-016-occurences.po  min-018-occurences.po  min-020-occurences.po  min-030-occurences.po  min-040-occurences.po  min-050-occurences.po  min-100-occurences.po
po/common-primary/: min-002-occurences.po  min-003-occurences.po  min-004-occurences.po  min-005-occurences.po  min-006-occurences.po  min-007-occurences.po  min-008-occurences.po  min-009-occurences.po  min-010-occurences.po  min-012-occurences.po  min-014-occurences.po  min-016-occurences.po  min-018-occurences.po  min-020-occurences.po  min-030-occurences.po  min-040-occurences.po  min-050-occurences.po  min-100-occurences.po
po/common-secondary/: min-002-occurences.po  min-003-occurences.po  min-004-occurences.po  min-005-occurences.po  min-006-occurences.po  min-007-occurences.po  min-008-occurences.po  min-009-occurences.po  min-010-occurences.po  min-012-occurences.po  min-014-occurences.po  min-020-occurences.po  min-050-occurences.po  min-100-occurences.po
po/cs/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/da/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/de/: Makefile.in  README.md  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  license.add  license.add.mdoc  untranslated.txt  use-for-compendium.sh
po/el/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  show-needed-updates.sh  translate-dates.pl  untranslated.txt
po/es/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  generate-manpage.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/fa/: create-new-translation.sh  format-po.sh  generate-addendum.sh  generate-manpage.sh  lang.config  license-groff.add  license-mdoc.add  license.add  noaddendum  translate-dates.pl.backup  untranslated.txt  update-po.sh
po/fi/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  generate-manpage.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/fr/: .gitignore  Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  license.add  scripts.po  translate-dates.pl  untranslated.txt
po/hu/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  generate-manpage.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/id/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  lang.config  license-groff.add  license-mdoc.add  license.add  show-needed-updates.sh  translate-dates.pl  untranslated.txt
po/it/: Makefile.am  Makefile.in  create-new-translation.sh  format-po.sh  generate-addendum.sh  generate-manpage.sh  lang.config  license-groff.add  license-mdoc.add  license.add  translate-dates.pl  untranslated.txt
po/man1/: Makefile.am  Makefile.in  addftinfo.1.po  arch.1.po  b2sum.1.po  base32.1.po  base64.1.po  basename.1.po  basenc.1.po  bootctl.1.po  bsd-write.1.po  busctl.1.po  bzdiff.1.po  bzgrep.1.po  bzip2.1.po  bzmore.1.po  cal.1.po  cal.ul.1.po  cat.1.po  cdda2ogg.1.po  chcon.1.po  chfn.1.po  chgrp.1.po  chkdupexe.1.po  chmod.1.po  choom.1.po  (+272 more)
(+39374 files in other folders)
